--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
             android:name=".activities.RegisterActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:exported="false" />
         <activity
             android:name=".activities.CarritoActivity"
@@ -34,7 +34,6 @@
             android:name=".activities.LoginActivity"
             android:exported="true"
             android:label="@string/app_name">
->>>>>>> 51f43b81ca8f75da8f223b5bde89921ad8302541
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
